<resources>
    <string name="app_name">Basic Phrases</string>
    <string name="doYouSpeakEnglish">do you speak\n english?</string>
    <string name="good_evening">Good Evening</string>
    <string name="hello">Hello</string>
    <string name="how_are_you">How are you?</string>
    <string name="ilivein">I live in</string>
    <string name="my_name_is">My name is</string>
    <string name="please">Please</string>
    <string name="welcome">Welcome</string>


</resources>
